<resources>
    <string name="app_name">unotes</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="save_note">Save Note</string>
    <string name="note_title">Note title</string>
    <string name="note_description">Note description</string>
    <string name="add_category">Add Category</string>
    <string name="name">Name:</string>
    <string name="save">Save</string>
    <string name="categorytitle">CategoryTitle</string>
    <string name="_11_notes">11 notes</string>
    <string name="notetitle">NoteTitle</string>
    <string name="_31_12_2019">31/12/2019</string>
    <string name="short_description">Short description</string>
    <string name="add_note">Add Note</string>
    <string name="search">Search</string>
    <string name="order_by_title_asc">Order By Title Asc</string>
    <string name="order_by_title_desc">Order By Title Desc</string>
    <string name="order_by_date_newest">Order By Date Newest</string>
    <string name="order_by_date_oldest">Order By Date Oldest</string>
    <string name="error_category_add">The category name can\'t be empty</string>
    <string name="error_save_note">The title can\'t be empty</string>
    <string name="msg_note_saved">Note saved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location">Map</string>
    <string name="add_record_audio">Add Record Audio</string>
</resources>
